<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Lengkap" />

        <EditText
            android:id="@+id/edtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbPria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pria" />

            <RadioButton
                android:id="@+id/rbWanita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wanita" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Status Pernikahan" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/status"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alamat" />

        <EditText
            android:id="@+id/edtAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hobi" />

        <EditText
            android:id="@+id/edtHobi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kemampuan Bahasa" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbKiri1"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/Indonesia"
                    />
                <CheckBox
                    android:id="@+id/cbKanan1"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/Inggris"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/cbKiri2"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/Arab"
                    />
                <CheckBox
                    android:id="@+id/cbKanan2"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/Jepang"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/cbKiri3"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/Korea"
                    />
                <CheckBox
                    android:id="@+id/cbKanan3"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/Jerman"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/cbKiri4"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/Lainnya"
                    />

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simpan" />

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Batal" />

    </LinearLayout>


</ScrollView>